--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>App-erinho</title>
+    <title>Frouta - Farma Palatia</title>
 	<style type="text/css">
 	body{
 		background: #F7F8F8;
